ran example file

--- a/Example_integrated_data.ipynb
+++ b/Example_integrated_data.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,8 +43,8 @@
     "import io\n",
     "import requests\n",
     "import matplotlib.pyplot as plt\n",
-    "import statsmodels.api as sm\n",
-    "import statsmodels.formula.api as smf\n",
+    "#import statsmodels.api as sm\n",
+    "#import statsmodels.formula.api as smf\n",
     "import numpy as np\n",
     "import re\n",
     "\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd2bb44ec18>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff7695977f0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
