--- a/Example_integrated_data.ipynb
+++ b/Example_integrated_data.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jupyter notebook example"
+    "# Jupyter notebook example\n",
+    "\n",
+    "### Python code with Sea Lamprey data"
    ]
   },
   {
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -200,9 +202,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "**Note: My origial code and analysis were done in R and included both better figures and more analysis. Think of this notebook as a proof of concent.**"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
