--- a/Example_integrated_data_R.ipynb
+++ b/Example_integrated_data_R.ipynb
@@ -44,7 +44,7 @@
    ],
    "source": [
     "library(tidyverse)\n",
-    "library(lmerTest)\n",
+    "library(lme4)\n",
     "library(scales)"
    ]
   },
